# redwing-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/redwing/: CHECKLIST.md  Cargo.toml
crates/redwing/examples/: regex_replace.rs
crates/redwing/src/: base_branch.rs  branch.rs  branch_reader.rs  delta.rs  derived_branch.rs  error.rs  lib.rs  materialize.rs  offset_map.rs  piece_table.rs  thicket.rs
crates/redwing/src/tests/: base_branch.rs  branch_reader.rs  delta.rs  derived_branch.rs  materialize.rs  offset_map.rs  piece_table.rs  range_map.rs
crates/redwing/tests/: integration.rs  m8_1_negative_edge_cases.rs  m8_2_zero_length_boundary.rs  m8_3_overflow_defenses.rs  m8_4_deep_chain_stress.rs  m8_5_interleaved_sequences.rs
