# Copyright (c) 2026, Michael Grier

[package]
name = "redwing"
version = "0.3.0"
edition = "2021"
description = "A copy-on-write, branching byte-stream library backed by a piece table and delta log."
license = "MIT"
repository = "https://github.com/MikeGrier/redwing-rs"

[dependencies]
memmap2 = "0.9"

[dev-dependencies]
regex = "1"
tempfile = "3"
